# sfmapi

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSING.md  README.md  SFMAPI-SPEC.md  pyproject.toml  renovate.json
clients/cpp/: CMakeLists.txt  README.md
clients/cpp/include/sfmapi/: client.hpp  sfmapi.hpp  specs.hpp
clients/cpp/test/: test_client.cpp  test_contract.cpp  test_extras.cpp
clients/python/: README.md  pyproject.toml
clients/python/sfmapi_client/: __init__.py  binary.py  client_async.py  client_sync.py  errors.py  models.py
clients/python/sfmapi_client/cli/: main.py
clients/python/sfmapi_client_gen/: README.md  _ergonomics.py  pyproject.toml
clients/python/sfmapi_client_gen/models/: __init__.py  bulk_set_pose_priors_v1_datasets_dataset_id_pose_priors_put_body.py  dataset_create.py  dataset_out.py  dataset_out_links_type_0.py  dataset_patch.py  features_request.py  features_spec.py  features_spec_extractor_options.py  global_spec.py  hierarchical_spec.py  image_observations_response.py  image_out_links_type_0.py  incremental_spec.py  job_accepted_response.py  job_detail_links_type_0.py  job_out_links_type_0.py  local_source_spec.py  localization_request.py  matcher_spec.py  matcher_spec_matcher_options.py  matches_request.py  merge_request.py  mesh_request.py  mesh_request_options.py  one_shot_features_response.py  one_shot_image_info.py  one_shot_localize_response.py  pairs_spec.py  pairs_spec_strategy.py  pipeline_request.py  point_visibility_response.py  pose_priors_bulk_response.py  (+13 more)
clients/python/tests/: test_client.py
(+415 files in other folders)
